--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,17 +1,22 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand" href="/">Logo</a>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/products">Products</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/add-products">Create Products</a>
-    </li>
-  </ul>
-</nav>
+<header class="site-header">
+  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+    <div class="container">
+      <a class="navbar-brand mr-4"href="">Awesome Blog</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarToggle">
+        <div class="navbar-nav mr-auto"> 
+          <a class="nav-item nav-link" href="{% url 'home'%}">Home</a>
+          <a class="nav-item nav-link" href="{% url 'posts'%}">Posts</a>
+        </div>
+        <!-- Navbar Right Side -->
+        <div class="navbar-nav">
+          {% if user.is_authenticated %}
+          {% else %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
