--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,9 +1,15 @@
 {% extends 'base.html'%}
 {% block content %}
 	{% for post in posts%}
-	<div class="content-section">
-		<h1> {{post.title}} </h1>
-		<p> {{post.content}} </p>
-	</div>
+		<article class="media content-section">
+		  <div class="media-body">
+		    <div class="article-metadata">
+		      <a class="mr-2" href="">{{ post.author.username }}</a>
+		      <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+		    </div>
+		    <h2><a class="article-title" href="/post/{{post.id}}">{{ post.title }}</a></h2>
+		    <p class="article-content">{{ post.content }}</p>
+		  </div>
+		</article>
 	{% endfor%}
 {% endblock %}
