Display comments in posts details

--- a/blog/templates/posts_detail.html
+++ b/blog/templates/posts_detail.html
@@ -10,4 +10,11 @@
 			<p class="article-content">{{ post.content }}</p>
 		</div>
 	</article>
+	<ul>
+	{% for comment in comments %}
+		<li>
+			<p>{{comment.content}} <span><strong>{{comment.date_posted}}</span></strong></p>
+		</li>
+	{% endfor %}
+	</ul>
 {% endblock %}
