--- a/blog/templates/posts_detail.html
+++ b/blog/templates/posts_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html'%}
+{% load crispy_forms_tags %}
 {% block content %}
 	<article class="media content-section">
 		<div class="media-body">
@@ -10,6 +11,11 @@
 			<p class="article-content">{{ post.content }}</p>
 		</div>
 	</article>
+	<form method="post">
+		{% csrf_token %}
+	  {{comments_form|crispy}}
+	  <input type="submit" class="btn btn-primary" value="Comment">
+	</form>
 	<ul>
 	{% for comment in comments %}
 		<li>
