Error handled for replies

--- a/blog/templates/posts_detail.html
+++ b/blog/templates/posts_detail.html
@@ -30,6 +30,7 @@
 				<div class="row">
 					<div class="col-sm-10">
 						<input type="text" name="reply" id="{{comment.id}}" class="form-control reply">
+						<p class="error text-danger">Reply cannot be empty</p>
 					</div>
 					<div class="col-sm-2">
 						<button class="btn btn-primary reply-btn">Reply</button>
