--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
       </div>
       <div class="col-md-4">
         <div class="content-section">
+          {% block sidebar %}{% endblock %}
         </div>
       </div>
     </div>
