--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,9 @@
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
           {% if user.is_authenticated %}
+          <a class="nav-item nav-link" href="{% url 'logout'%}">logout</a>
           {% else %}
+          <a class="nav-item nav-link" href="{% url 'user-register'%}">Register</a>
           {% endif %}
         </div>
       </div>
