Css added for like button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,3 +104,13 @@ a.article-title:hover {
   text-decoration: none;
   color: #428bca;
 }
+
+.like {
+  background: #5f788a;
+  width: 60px;
+  padding: 4px;
+  color: white;
+}
+.like:hover {
+  cursor: pointer;
+}
