--- a/blog/templates/user_posts.html
+++ b/blog/templates/user_posts.html
@@ -7,6 +7,12 @@
 		      <a class="mr-2" href="">{{ post.author.username }}</a>
 		      <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
 		    </div>
+		    {% if user.id == post.author.id %}
+        <div class="actions">
+          <a href="" class="btn btn-success btn-sm">EDIT</a>
+          <a href="" class="btn btn-danger btn-sm">DELETE</a>
+        </div>
+        {% endif %}
 		    <h2><a class="article-title" href="/post/{{post.id}}">{{ post.title }}</a></h2>
 		    <p class="article-content">{{ post.content }}</p>
 		  </div>
