--- a/blog/templates/user_posts.html
+++ b/blog/templates/user_posts.html
@@ -9,7 +9,7 @@
 		    </div>
 		    {% if user.id == post.author.id %}
         <div class="actions">
-          <a href="" class="btn btn-success btn-sm">EDIT</a>
+          <a href="/post/edit/{{post.id}}" class="btn btn-success btn-sm">EDIT</a>
           <a href="" class="btn btn-danger btn-sm">DELETE</a>
         </div>
         {% endif %}
