--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,7 @@
         <div class="navbar-nav">
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+          <a class="nav-item nav-link" href="{% url 'post-create'%}">Create Post</a>
           <a class="nav-item nav-link" href="/post/user/{{user.id}}">My Posts</a>
           {% else %}
           <a class="nav-item nav-link" href="{% url 'Login'%}">Login</a>
