--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,3 +117,9 @@ a.article-title:hover {
 .actions a:hover {
   color: white;
 }
+
+.alert-error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
