Comment button added

--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -10,8 +10,11 @@
 		    <h2><a class="article-title" href="/post/{{post.id}}">{{ post.title }}</a></h2>
 		    <p class="article-content">{{ post.content }}</p>
 		    <div class="like">
-		    	<p  id="{{post.id}}">LIKE <span class="count">{{ post.count }}</span></p>
-		  	</div>
+          <p  id="{{post.id}}">LIKE <span class="count">{{ post.count }}</span></p>
+        </div>
+        <div class="comment">
+          <a href="/post/{{post.id}}#div_id_content">Comment</a>
+        </div>
 		  </div>
 		</article>
 	{% endfor%}
